# viscera

./: .gitignore  Blood_Bucket_Analysis.md  Blood_Bucket_Recreation_Guide.md  CLAUDE.md  CMakeLists.txt  trasncript_plastic.txt  viscera logo.af
.github/workflows/: build-windows.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SnappedParameterBool.h
Source/cloud/: CloudPresetManager.cpp  CloudPresetManager.h
Source/dsp/: ADSREnvelope.h  AllpassDisperser.h  AudioVisualBuffer.h  DCBlocker.h  FMSound.h  FMVoice.cpp  FMVoice.h  HarmonicTable.h  HemoFold.h  LFO.h  LiquidChorus.h  Oscillator.h  PlateReverb.h  RubberComb.h  SVFilter.h  StereoDelay.h  VolumeShaper.h  XORDistortion.h
Source/gui/: CarrierSection.cpp  CarrierSection.h  DelaySection.cpp  DelaySection.h  FilterSection.cpp  FilterSection.h  FlubberVisualizer.cpp  FlubberVisualizer.h  GlobalSection.cpp  GlobalSection.h  HarmonicEditor.cpp  HarmonicEditor.h  LFOSection.cpp  LFOSection.h  LicenseOverlay.cpp  LicenseOverlay.h  LiquidSection.cpp  LiquidSection.h  ModMatrixSection.cpp  ModMatrixSection.h  ModSlider.h  ModulatorSection.cpp  ModulatorSection.h  ParasiteLookAndFeel.cpp  ParasiteLookAndFeel.h  PitchEnvSection.cpp  PitchEnvSection.h  PresetBrowser.cpp  PresetBrowser.h  PresetOverlay.cpp  PresetOverlay.h  ReverbSection.cpp  ReverbSection.h  RubberSection.cpp  RubberSection.h  SaveOverlay.cpp  SaveOverlay.h  TabbedEffectSection.cpp  TabbedEffectSection.h  VisceraLookAndFeel.cpp  (+5 more)
Source/license/: LicenseConfig.h  LicenseManager.cpp  LicenseManager.h
Source/util/: Logger.cpp  Logger.h
graphics/: Knob_Blue.knob  Knob_empty_circle.knob  Knob_no_circle.knob  flubber_v7f_lighter.glsl  flubber_v7g_dark.glsl  flubber_v7g_light.glsl
presets/: Aggrotuff.prst  Anvil.prst  Bass_808_Sub.prst  Bass_808_Sub.visc  Bass_Acid_Scream.prst  Bass_Acid_Scream.visc  Bass_Acid_Squelch.prst  Bass_Acid_Squelch.visc  Bass_Crunch_Drop.prst  Bass_Crunch_Drop.visc  Bass_FM_Kick.visc  Bass_Filth_Stab.prst  Bass_Filth_Stab.visc  Bass_Foghorn_Stab.prst  Bass_Foghorn_Stab.visc  Bass_Frog_Ribbit.prst  Bass_Frog_Ribbit.visc  Bass_Glide_Kick.visc  Bass_Goa_Acid.prst  Bass_Goa_Acid.visc  Bass_Gutter_Growl.prst  Bass_Gutter_Growl.visc  Bass_Jump_Razor.prst  Bass_Jump_Razor.visc  Bass_Microwave_Kick.visc  Bass_Neuro_Bite.prst  Bass_Neuro_Bite.visc  Bass_Pluck_Bass.prst  Bass_Pluck_Bass.visc  Bass_Psy_Squelch.prst  Bass_Psy_Squelch.visc  Bass_Razor_Sub.prst  Bass_Razor_Sub.visc  Bass_Reese.prst  Bass_Reese.visc  Bass_Saw_Tear.prst  Bass_Saw_Tear.visc  Bass_Steel_Jaw.prst  Bass_Steel_Jaw.visc  Bass_Sub_Growl.prst  (+156 more)
resources/: Parasite.vstpreset  transcript_liquid.txt  viscera logo.af
tests/: TestHelpers.h  TestMain.cpp  test_ADSREnvelope.cpp  test_AllpassDisperser.cpp  test_DCBlocker.cpp  test_Effects.cpp  test_FMVoice.cpp  test_HarmonicTable.cpp  test_HemoFold.cpp  test_LFO.cpp  test_Oscillator.cpp  test_Presets.cpp  test_Processor.cpp  test_SVFilter.cpp  test_StateRoundTrip.cpp  test_Stress.cpp  test_VolumeShaper.cpp  test_XORDistortion.cpp
website/: CLAUDE.md  flubber.js  index.html  style.css
